<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tmendes.dadosd.MainActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:contentDescription="@string/image"
        android:src="@mipmap/ic_launcher"
        android:onClick="murmuring" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivLogo"
        android:text="@string/text_cpf_title"
        android:id="@+id/txCpfTitle"
        android:layout_alignParentStart="true"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivLogo"
        android:text="@string/text_cpf"
        android:id="@+id/txCpf"
        android:layout_margin="5dp"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_info"
        android:layout_below="@+id/txCpfTitle"
        android:layout_margin="5dp"
        android:id="@+id/txInfo" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_btn_create"
        android:id="@+id/btnGenData"
        android:layout_below="@+id/txInfo"
        android:layout_margin="5dp"
        android:onClick="genData"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_btn_about"
        android:id="@+id/btnAbout"
        android:layout_below="@+id/btnGenData"
        android:layout_margin="5dp"
        android:onClick="about"/>


</RelativeLayout>
